--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 </div>
         <div class="navbar-collapse" id="idNavbar" >
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/games">Game Collection</a></li>
-                <li><a href="/videosAndStreams">Videos & Streams</a></li>
-                <li><a href="/about">About Us</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./games.html">Game Collection</a></li>
+                <li><a href="./videosAndStreams.html">Videos & Streams</a></li>
+                <li><a href="./about.html">About Us</a></li>
             </ul>
         </div>
     </div>
